k8-configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: welcome-app
  template:
    metadata:
      labels:
        app: welcome-app
    spec:
      containers:
        - name: welcome-app-container
          image: namespaxe/zahoro:1.0.0
          resources:
            requests:
              memory: "60Mi"
              cpu: "10m"
            limits:
              memory: "70Mi"
              cpu: "10m"
