k8-configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: welcome-app.ns.namespaxe.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: welcome-app-service
                port:
                  number: 80
